# zed_workspace

./: README.md
demo/: Cargo.toml
demo/crates/bar/: Cargo.toml
demo/crates/bar/src/: lib.rs
demo/crates/foo/: Cargo.toml
demo/crates/foo/src/: lib.rs
demo/src/: main.rs
zed_demo/: Cargo.toml
zed_demo/crates/bar/: Cargo.toml
zed_demo/crates/foo/: Cargo.toml
zed_demo/crates/foo/src/: lib.rs
zed_demo/crates/my_project/: Cargo.toml
zed_demo/crates/my_project/src/: main.rs
